--- a/index.html
+++ b/index.html
@@ -156,13 +156,24 @@
             <div class="faq-question -uppercasing">
               Lorem Ipsum has been the industry's standard
             </div>
-            <div class="faq-toggle -pointer" onclick="showElement(a1, b1, c1)">
-              <i class="fas fa-plus" style="display: block" id="c1"></i>
-              <i class="fas fa-minus" style="display: none" id="b1"></i>
+            <div
+              class="faq-toggle -pointer"
+              onclick="showElement(faqAnswer1, faqMinusIcon1, faqPlusIcon1)"
+            >
+              <i
+                class="fas fa-plus"
+                style="display: block"
+                id="faqPlusIcon1"
+              ></i>
+              <i
+                class="fas fa-minus"
+                style="display: none"
+                id="faqMinusIcon1"
+              ></i>
             </div>
           </div>
           <hr />
-          <div class="faq-answer" style="display: none" id="a1">
+          <div class="faq-answer" style="display: none" id="faqAnswer1">
             It is a long escardlished fact that a reader will be distracted by
             the readable content of a page when looking at its layout. The point
             of using Lorem Ipsum is that it has a more-or-less normal
@@ -175,13 +186,24 @@
             <div class="faq-question -uppercasing">
               Lorem Ipsum has been the industry's standard
             </div>
-            <div class="faq-toggle -pointer" onclick="showElement(a2, b2, c2)">
-              <i class="fas fa-plus" style="display: block" id="c2"></i>
-              <i class="fas fa-minus" style="display: none" id="b2"></i>
+            <div
+              class="faq-toggle -pointer"
+              onclick="showElement(faqAnswer2, faqMinusIcon2, faqPlusIcon2)"
+            >
+              <i
+                class="fas fa-plus"
+                style="display: block"
+                id="faqPlusIcon2"
+              ></i>
+              <i
+                class="fas fa-minus"
+                style="display: none"
+                id="faqMinusIcon2"
+              ></i>
             </div>
           </div>
           <hr />
-          <div class="faq-answer" style="display: none" id="a2">
+          <div class="faq-answer" style="display: none" id="faqAnswer2">
             It is a long established fact that a reader will be distracted by
             the readable content of a page when looking at its layout. The point
             of using Lorem Ipsum is that it has a more-or-less normal
@@ -194,13 +216,24 @@
             <div class="faq-question -uppercasing">
               Lorem Ipsum has been the industry's standard
             </div>
-            <div class="faq-toggle -pointer" onclick="showElement(a3, b3, c3)">
-              <i class="fas fa-plus" style="display: block" id="c3"></i>
-              <i class="fas fa-minus" style="display: none" id="b3"></i>
+            <div
+              class="faq-toggle -pointer"
+              onclick="showElement(faqAnswer3, faqMinusIcon3, faqPlusIcon3)"
+            >
+              <i
+                class="fas fa-plus"
+                style="display: block"
+                id="faqPlusIcon3"
+              ></i>
+              <i
+                class="fas fa-minus"
+                style="display: none"
+                id="faqMinusIcon3"
+              ></i>
             </div>
           </div>
           <hr />
-          <div class="faq-answer" style="display: none" id="a3">
+          <div class="faq-answer" style="display: none" id="faqAnswer3">
             It is a long established fact that a reader will be distracted by
             the readable content of a page when looking at its layout. The point
             of using Lorem Ipsum is that it has a more-or-less normal
@@ -213,13 +246,24 @@
             <div class="faq-question -uppercasing">
               Lorem Ipsum has been the industry's standard
             </div>
-            <div class="faq-toggle -pointer" onclick="showElement(a4, b4, c4)">
-              <i class="fas fa-plus" style="display: block" id="c4"></i>
-              <i class="fas fa-minus" style="display: none" id="b4"></i>
+            <div
+              class="faq-toggle -pointer"
+              onclick="showElement(faqAnswer4, faqMinusIcon4, faqPlusIcon4)"
+            >
+              <i
+                class="fas fa-plus"
+                style="display: block"
+                id="faqPlusIcon4"
+              ></i>
+              <i
+                class="fas fa-minus"
+                style="display: none"
+                id="faqMinusIcon4"
+              ></i>
             </div>
           </div>
           <hr />
-          <div class="faq-answer" style="display: none" id="a4">
+          <div class="faq-answer" style="display: none" id="faqAnswer4">
             It is a long established fact that a reader will be distracted by
             the readable content of a page when looking at its layout. The point
             of using Lorem Ipsum is that it has a more-or-less normal
@@ -232,13 +276,24 @@
             <div class="faq-question -uppercasing">
               Lorem Ipsum has been the industry's standard
             </div>
-            <div class="faq-toggle -pointer" onclick="showElement(a5, b5, c5)">
-              <i class="fas fa-plus" style="display: block" id="c5"></i>
-              <i class="fas fa-minus" style="display: none" id="b5"></i>
+            <div
+              class="faq-toggle -pointer"
+              onclick="showElement(faqAnswer5, faqMinusIcon5, faqPlusIcon5)"
+            >
+              <i
+                class="fas fa-plus"
+                style="display: block"
+                id="faqPlusIcon5"
+              ></i>
+              <i
+                class="fas fa-minus"
+                style="display: none"
+                id="faqMinusIcon5"
+              ></i>
             </div>
           </div>
           <hr />
-          <div class="faq-answer" style="display: none" id="a5">
+          <div class="faq-answer" style="display: none" id="faqAnswer5">
             It is a long established fact that a reader will be distracted by
             the readable content of a page when looking at its layout. The point
             of using Lorem Ipsum is that it has a more-or-less normal
@@ -251,13 +306,24 @@
             <div class="faq-question -uppercasing">
               Lorem Ipsum has been the industry's standard
             </div>
-            <div class="faq-toggle -pointer" onclick="showElement(a6, b6, c6)">
-              <i class="fas fa-plus" style="display: block" id="c6"></i>
-              <i class="fas fa-minus" style="display: none" id="b6"></i>
+            <div
+              class="faq-toggle -pointer"
+              onclick="showElement(faqAnswer6, faqMinusIcon6, faqPlusIcon6)"
+            >
+              <i
+                class="fas fa-plus"
+                style="display: block"
+                id="faqPlusIcon6"
+              ></i>
+              <i
+                class="fas fa-minus"
+                style="display: none"
+                id="faqMinusIcon6"
+              ></i>
             </div>
           </div>
           <hr />
-          <div class="faq-answer" style="display: none" id="a6">
+          <div class="faq-answer" style="display: none" id="faqAnswer6">
             It is a long established fact that a reader will be distracted by
             the readable content of a page when looking at its layout. The point
             of using Lorem Ipsum is that it has a more-or-less normal
@@ -270,13 +336,24 @@
             <div class="faq-question -uppercasing">
               Lorem Ipsum has been the industry's standard
             </div>
-            <div class="faq-toggle -pointer" onclick="showElement(a7, b7, c7)">
-              <i class="fas fa-plus" style="display: block" id="c7"></i>
-              <i class="fas fa-minus" style="display: none" id="b7"></i>
+            <div
+              class="faq-toggle -pointer"
+              onclick="showElement(faqAnswer7, faqMinusIcon7, faqPlusIcon7)"
+            >
+              <i
+                class="fas fa-plus"
+                style="display: block"
+                id="faqPlusIcon7"
+              ></i>
+              <i
+                class="fas fa-minus"
+                style="display: none"
+                id="faqMinusIcon7"
+              ></i>
             </div>
           </div>
           <hr />
-          <div class="faq-answer" style="display: none" id="a7">
+          <div class="faq-answer" style="display: none" id="faqAnswer7">
             It is a long established fact that a reader will be distracted by
             the readable content of a page when looking at its layout. The point
             of using Lorem Ipsum is that it has a more-or-less normal
@@ -289,13 +366,24 @@
             <div class="faq-question -uppercasing">
               Lorem Ipsum has been the industry's standard
             </div>
-            <div class="faq-toggle -pointer" onclick="showElement(a8, b8, c8)">
-              <i class="fas fa-plus" style="display: block" id="c8"></i>
-              <i class="fas fa-minus" style="display: none" id="b8"></i>
+            <div
+              class="faq-toggle -pointer"
+              onclick="showElement(faqAnswer8, faqMinusIcon8, faqPlusIcon8)"
+            >
+              <i
+                class="fas fa-plus"
+                style="display: block"
+                id="faqPlusIcon8"
+              ></i>
+              <i
+                class="fas fa-minus"
+                style="display: none"
+                id="faqMinusIcon8"
+              ></i>
             </div>
           </div>
           <hr />
-          <div class="faq-answer" style="display: none" id="a8">
+          <div class="faq-answer" style="display: none" id="faqAnswer8">
             It is a long established fact that a reader will be distracted by
             the readable content of a page when looking at its layout. The point
             of using Lorem Ipsum is that it has a more-or-less normal
@@ -308,13 +396,24 @@
             <div class="faq-question -uppercasing">
               Lorem Ipsum has been the industry's standard
             </div>
-            <div class="faq-toggle -pointer" onclick="showElement(a9, b9, c9)">
-              <i class="fas fa-plus" style="display: block" id="c9"></i>
-              <i class="fas fa-minus" style="display: none" id="b9"></i>
+            <div
+              class="faq-toggle -pointer"
+              onclick="showElement(faqAnswer9, faqMinusIcon9, faqPlusIcon9)"
+            >
+              <i
+                class="fas fa-plus"
+                style="display: block"
+                id="faqPlusIcon9"
+              ></i>
+              <i
+                class="fas fa-minus"
+                style="display: none"
+                id="faqMinusIcon9"
+              ></i>
             </div>
           </div>
           <hr />
-          <div class="faq-answer" style="display: none" id="a9">
+          <div class="faq-answer" style="display: none" id="faqAnswer9">
             It is a long established fact that a reader will be distracted by
             the readable content of a page when looking at its layout. The point
             of using Lorem Ipsum is that it has a more-or-less normal
